[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/UI/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/OpenSans.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="LevelSelect" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.0
margin_top = -150.0
margin_right = 77.0
margin_bottom = -110.0

[node name="PrevButton" type="Button" parent="LevelSelect"]
margin_right = 23.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "<"

[node name="Label" type="Label" parent="LevelSelect"]
margin_left = 27.0
margin_top = 3.0
margin_right = 127.0
margin_bottom = 37.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 1 )
text = "Level"
align = 1

[node name="NextButton" type="Button" parent="LevelSelect"]
margin_left = 131.0
margin_right = 154.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -85.0
margin_right = 75.0
margin_bottom = 85.0
custom_constants/separation = 20
alignment = 1

[node name="PlayButton" type="Button" parent="Buttons"]
margin_right = 150.0
margin_bottom = 75.0
rect_min_size = Vector2( 150, 75 )
focus_neighbour_bottom = NodePath("../QuitButton")
text = "Play"

[node name="QuitButton" type="Button" parent="Buttons"]
margin_top = 95.0
margin_right = 150.0
margin_bottom = 170.0
rect_min_size = Vector2( 150, 75 )
focus_neighbour_top = NodePath("../PlayButton")
text = "Quit"

[connection signal="pressed" from="LevelSelect/PrevButton" to="." method="_on_PrevLvlButton_pressed"]
[connection signal="pressed" from="LevelSelect/NextButton" to="." method="_on_NextLvlButton_pressed"]
[connection signal="pressed" from="Buttons/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
